deployments/setup/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webapp-destinations
spec:
  host: webapp.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: svc1-destinations
spec:
    host: svc1.default.svc.cluster.local
    subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: svc2-destinations
spec:
    host: svc2.default.svc.cluster.local
    subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: svc3-destinations
spec:
    host: svc3.default.svc.cluster.local
    subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: svc4-destinations
spec:
    host: svc4.default.svc.cluster.local
    subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: svc5-destinations
spec:
    host: svc5.default.svc.cluster.local
    subsets:
    - name: v1
      labels:
        version: v1
